b0cbang-fe-template.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bocbang-fe
  labels:
    project: my-project
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bocbang-fe
  name: bocbang-fe-deployment
  namespace: bocbang-fe
spec:
  replicas: 2
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: bocbang-fe
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bocbang-fe
      namespace: bocbang-fe
    spec:
      containers:
        - image: 296725355870.dkr.ecr.ap-southeast-1.amazonaws.com/bocbang-fe/bocbang-fe-image
          imagePullPolicy: Always
          name: bocbang-fe
          ports:
            - containerPort: 8080
              name: tcp
              protocol: TCP
          # volumeMounts:
          #   - mountPath: /app/www/config.js
          #     name: config-volume
          #     subPath: config.js
      imagePullSecrets:
        - name: aws-bocbang-secret
      # volumes:
      #   - configMap:
      #       defaultMode: 420
      #       name: bocbang-fe-config
      #     name: config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: bocbang-fe-service
  namespace: bocbang-fe
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 8887
      protocol: TCP
      targetPort: 8080
  selector:
    app: bocbang-fe
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bocbang-fe-ingress
  namespace: bocbang-fe
spec:
  ingressClassName: nginx
  rules:
    - host: www.tranthanhdat.xyz
      http:
        paths:
          - backend:
              service:
                name: bocbang-fe-service
                port:
                  number: 8887
            path: /boc-bang-AI
            pathType: Prefix
